--- a/HaloWwise/HaloWwise.csproj
+++ b/HaloWwise/HaloWwise.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{16E0214A-47E7-41A3-ACDA-6D3899156099}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Horus</RootNamespace>
-    <AssemblyName>Horus</AssemblyName>
+    <RootNamespace>HaloWwise</RootNamespace>
+    <AssemblyName>HaloWwise</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -33,6 +33,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -41,13 +45,20 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="Zoltu.EndianAwareBinaryReaderWriter, Version=0.0.6.0, Culture=neutral, PublicKeyToken=1d5722c0db664e4d, processorArchitecture=MSIL">
+      <HintPath>..\packages\Zoltu.EndianAwareBinaryReaderWriter.0.0.6.0\lib\net45\Zoltu.EndianAwareBinaryReaderWriter.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BankReader.cs" />
+    <Compile Include="PackManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
